Bug 1545555 - Improve about:devtools dark mode support. r=jdescottes
Differential Revision: https://phabricator.services.mozilla.com/D28121

UltraBlame original commit: f841c2ff2efd0a4835f71df5f4b6ddc84b6c1b40

--- a/devtools/startup/aboutdevtools/aboutdevtools.css
+++ b/devtools/startup/aboutdevtools/aboutdevtools.css
@@ -195,9 +195,13 @@ var
 (
 -
 -
-grey
+in
 -
-30
+content
+-
+border
+-
+color
 )
 ;
 }
@@ -319,35 +323,6 @@ margin
 top
 :
 10px
-;
-}
-.
-external
-.
-external
-:
-hover
-.
-external
-:
-visited
-.
-external
-:
-hover
-:
-active
-{
-color
-:
-var
-(
--
--
-blue
--
-60
-)
 ;
 }
 .
